continue layout and toast

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,7 @@
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="src/scss/main.scss">
+    <link rel="stylesheet" href="node_modules/croppr/src/css/croppr.css">
 
     <meta name="theme-color" content="#fafafa">
   </head>
